Fixed ： 是proto set 报 null
他妈的怎么是启动延迟导致的selfIp = null。。
加信号量解决